syntax = "proto3";

package flowcraft_proto.v1;

import "base.proto";

message Node {
  string id = 1;
  string type = 2;
  Position position = 3;
  NodeData data = 4;
  double width = 5;
  double height = 6;
  bool selected = 7;
  string parent_id = 8;
}

message NodeData {
  string label = 1;
  repeated RenderMode available_modes = 2;
  RenderMode active_mode = 3;
  MediaContent media = 4;
  repeated Widget widgets = 5;
  
  repeated Port input_ports = 6;
  repeated Port output_ports = 7;
  
  map<string, string> metadata = 8;
}

enum RenderMode {
  MODE_UNSPECIFIED = 0;
  MODE_MEDIA = 1;
  MODE_WIDGETS = 2;
  MODE_MARKDOWN = 3;
}

message MediaContent {
  MediaType type = 1;
  string url = 2;
  string content = 3;
  double aspect_ratio = 4;
  repeated string gallery_urls = 5;
}

enum MediaType {
  MEDIA_UNSPECIFIED = 0;
  MEDIA_IMAGE = 1;
  MEDIA_VIDEO = 2;
  MEDIA_AUDIO = 3;
  MEDIA_MARKDOWN = 4;
}

message Port {
  string id = 1;
  string label = 2;
  PortType type = 3;
  string color = 4;
  PortStyle style = 5;
  string description = 6;
}

message PortType {
  string main_type = 1;
  string item_type = 2;
  bool is_generic = 3;
}

enum PortStyle {
  PORT_STYLE_CIRCLE = 0;
  PORT_STYLE_SQUARE = 1;
  PORT_STYLE_DIAMOND = 2;
  PORT_STYLE_DASH = 3;
}

message Widget {
  string id = 1;
  WidgetType type = 2;
  string label = 3;
  string value_json = 4; 
  WidgetConfig config = 5;
  repeated WidgetOption options = 6;
  bool is_readonly = 7;
  bool is_loading = 8;
  string input_port_id = 9; 
}

enum WidgetType {
  WIDGET_UNSPECIFIED = 0;
  WIDGET_TEXT = 1;
  WIDGET_SELECT = 2;
  WIDGET_CHECKBOX = 3;
  WIDGET_SLIDER = 4;
  WIDGET_BUTTON = 5;
}

message WidgetOption {
  string label = 1;
  string value = 2;
  string description = 3;
}

message WidgetConfig {
  string placeholder = 1;
  double min = 2;
  double max = 3;
  double step = 4;
  bool dynamic_options = 5;
  string action_target = 6;
}

// Moving Edge and Task structures here to avoid circular or missing dependencies in service.proto
message Edge {
  string id = 1;
  string source = 2;
  string target = 3;
  string source_handle = 4;
  string target_handle = 5;
  map<string, string> metadata = 6;
}

enum TaskStatus {
  TASK_PENDING = 0;
  TASK_PROCESSING = 1;
  TASK_COMPLETED = 2;
  TASK_FAILED = 3;
  TASK_CANCELLED = 4;
}

message TaskUpdate {
  string task_id = 1;
  TaskStatus status = 2;
  double progress = 3;
  string message = 4;
  string result_json = 5;
}

message NodeTemplate {
  string id = 1;
  string label = 2;
  repeated string path = 3;
  NodeData default_data = 4;
  double default_width = 5;
  double default_height = 6;
}